# FV1D

./: .gitignore  .gitmodules  BoundaryConditions.h  CMakeLists.txt  ComputeDt.h  Init.h  README.md  RiemannSolvers.h  SaveSolution.h  SimInfo.h  States.h  ThermalConduction.h  Update.h  Viscosity.h  main.cpp
python/: animate_h5.py  plot_ICs.py
settings/: B02.ini  B02_no_diffusivities.ini  B02_restart.ini  C91.ini  C91_lores.ini  C91_no_diffusivities.ini  sod.ini
